# QRcode

./: ALphanumericValues  AlignmentPatternLocations  CMakeLists.txt  Capacities  CodeWordsBlockInformation  LogTable  README.txt  RemainderBits  analysisQR.cpp  myQRcode.cpp  myQRcode.h  test.cpp  test_link.txt  zero-one
